--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -140,6 +140,12 @@ body{
       height: 50%;
       margin-top: 15px;
     }
+    &__file{
+      display: block;
+      width: 100%;
+      height: 50%;
+      margin-top: 15px;
+    }
     &__btn{
       display: block;
       width: 30%;
