--- a/app/views/users/_mains.html.haml
+++ b/app/views/users/_mains.html.haml
@@ -1,14 +1,13 @@
 .create-one
   .create-one__body-main
     .create-one__body-main--top
-      %p 誰でも簡単に手軽にできるブログアプリ
+      %p 誰でも手軽に簡単に書いて投稿できるブログアプリ
     .create-one__body-main--middle
-      %p ブログアプリは個人で
+      %p ブログアプリは個人や複数での
       %p 日々の日常や出来事を記して
-      %p 気軽に楽しんでやることができます
+      %p 気軽に人のを読んだり、振り返ったり楽しむことができます
     .create-one__body-main--btn
       = link_to "#", class: "icon" do
         = image_tag 'app-store.svg',class: "appBtn"
       = link_to "#", class: "icon" do
         = image_tag 'google-play.svg',class: "googleBtn"
-      
