--- a/app/views/posts/_mains.html.haml
+++ b/app/views/posts/_mains.html.haml
@@ -1,11 +1,11 @@
 .create-one
   .create-one__body-main
     .create-one__body-main--top
-      %p 誰でも手軽に簡単に書いて投稿できるブログアプリ
+      %p 誰でも手軽に書けて投稿できるブログアプリ
     .create-one__body-main--middle
-      %p ブログアプリは個人や複数での
+      %p このブログアプリは個人で
       %p 日々の日常や出来事を記して
-      %p 気軽に人のを読んだり、メモを残したり
+      %p 気軽に他の人のブログメモを残したり
       %p 見返すことができます。
     .create-one__body-main--btn
       = link_to "#", class: "icon" do
