チャット　ブログ

--- a/app/views/posts/_mains.html.haml
+++ b/app/views/posts/_mains.html.haml
@@ -1,12 +1,12 @@
 .create-one
   .create-one__body-main
     .create-one__body-main--top
-      %p 誰でも手軽に書けて投稿できるブログアプリ
+      %p 誰でも手軽に書けて手軽に投稿できるブログアプリ
     .create-one__body-main--middle
-      %p このブログアプリは個人で
-      %p 日々の日常や出来事を記して
-      %p 気軽に他の人のブログメモを残したり
-      %p 見返すことができます。
+      %p 個人で日々の出来事を
+      %p 簡単に投稿でき
+      %p 過去の振り返りもラクラク。
+      %p メモ帳としても活用できるブログアプリです。
     .create-one__body-main--btn
       = link_to "#", class: "icon" do
         = image_tag 'app-store.svg',class: "appBtn"
