チャット　ブログ

--- a/app/views/posts/_mains.html.haml
+++ b/app/views/posts/_mains.html.haml
@@ -1,7 +1,8 @@
 .create-one
   .create-one__body-main
     .create-one__body-main--top
-      %p 誰でも気軽に書けて手軽に投稿できるブログアプリ
+      %p 誰でも気軽に書けて手軽に投稿できる
+      %p ブログアプリ
     .create-one__body-main--middle
       %p 個人で日々の出来事を
       %p 簡単に投稿でき
